--- a/indexUI5.html
+++ b/indexUI5.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <meta charset="utf-8"/>
-<title>Hello World Demo with SAPUI5</title>
+<title>TESTHello World Demo with SAPUI5</title>
 <script id="sap-ui-bootstrap" type="text/javascript"
     src="/sap/ui5/1/resources/sap-ui-core.js"
     data-sap-ui-libs="sap.ui.commons,sap.ui.table,sap.ui.ux3,sap.ui.demokit"
